--- a/Shrek2ModdingSDK/Shrek2ModManager/SettingsWindow.xaml
+++ b/Shrek2ModdingSDK/Shrek2ModManager/SettingsWindow.xaml
@@ -17,7 +17,7 @@
         Icon="pack://siteoforigin:,,,/Resources/s2mmlogo.png"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        Title="Settings" Height="320" Width="450">
+        Title="Settings" Height="350" Width="450">
     <Grid>
         <StackPanel>
             <StackPanel Margin="15">
@@ -31,7 +31,8 @@
                              IsEnabled="False"
                              />
 
-                <Button x:Name="Button_PickGameFolder" Margin="0,5,0,15" Style="{DynamicResource MaterialDesignRaisedButton}" Background="#b7cba8" Height="25" BorderThickness="0" Content="Locate Game.exe" />
+                <Button x:Name="Button_PickGameFolder" Margin="0,5,0,5" Style="{DynamicResource MaterialDesignRaisedButton}" Background="#65a338" Height="25" BorderThickness="0" Content="Locate Game.exe" />
+                <Button x:Name="Button_OpenGameFolder" Margin="0,0,0,15" Style="{DynamicResource MaterialDesignRaisedButton}" Background="#b7cba8" Height="25" BorderThickness="0" Content="Open Game Folder" />
 
                 <ComboBox x:Name="Settings_Language" Margin="0,10,0,0" 
                               SelectedIndex="0"
