--- a/Shrek2ModdingSDK/Shrek2ModManager/MainWindow.xaml
+++ b/Shrek2ModdingSDK/Shrek2ModManager/MainWindow.xaml
@@ -26,7 +26,7 @@
             <RowDefinition />
             <RowDefinition Height="75" />
         </Grid.RowDefinitions>
-        
+
         <StackPanel Grid.Row="0" Orientation="Horizontal">
             <Button VerticalAlignment="Top" Style="{DynamicResource MaterialDesignRaisedButton}" Foreground="#fff" Margin="10,10,0,0">Add mod</Button>
             <Button VerticalAlignment="Top" Style="{DynamicResource MaterialDesignRaisedButton}" Foreground="#fff" Margin="10,10,0,0">Settings</Button>
@@ -58,7 +58,7 @@
                                         <TextBlock FontSize="20" FontWeight="Bold" Text="{Binding Title}" />
                                         <TextBlock FontSize="15" Text="{Binding Description}" TextTrimming="WordEllipsis" />
                                     </StackPanel>
-                                    <Button Margin="0,0,5,0" Height="30" Width="30" Grid.Column="2" Style="{DynamicResource MaterialDesignFloatingActionButton}">
+                                    <Button Name="Specific_Mod_Settings" Click="Specific_Mod_Settings_Click" Margin="0,0,5,0" Height="30" Width="30" Grid.Column="2" Style="{DynamicResource MaterialDesignFloatingActionButton}">
                                         <materialDesign:PackIcon Kind="Cog" Foreground="White"/>
                                     </Button>
                                     <Button BorderBrush="#e7447a" Background="#e7447a" Margin="0,0,5,0" Height="30" Width="30" Grid.Column="3" Style="{DynamicResource MaterialDesignFloatingActionButton}">
