--- a/Shrek2ModdingSDK/Shrek2ModManager/MainWindow.xaml
+++ b/Shrek2ModdingSDK/Shrek2ModManager/MainWindow.xaml
@@ -19,6 +19,7 @@
         MinHeight="500" 
         MinWidth="400"
         WindowStartupLocation="CenterScreen"
+        Initialized="Window_Initialized"
         Icon="pack://siteoforigin:,,,/Resources/s2mmlogo.png">
     <Grid>
         <Grid.RowDefinitions>
@@ -42,7 +43,7 @@
             <TextBlock Grid.Row="0" Margin="10,0,0,0" FontWeight="Bold" Style="{DynamicResource MaterialDesignHeadline4TextBlock}">Installed mods</TextBlock>
 
             <ScrollViewer Grid.Row="1">
-                <ItemsControl ItemsSource="{Binding Items}">
+                <ItemsControl Name="ModItemsList">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate DataType="{x:Type local:Shrek2ModListItem}">
                             <Border x:Name="Border" Padding="4">
@@ -58,7 +59,7 @@
                                         <TextBlock FontSize="20" FontWeight="Bold" Text="{Binding Title}" />
                                         <TextBlock FontSize="15" Text="{Binding Description}" TextTrimming="WordEllipsis" />
                                     </StackPanel>
-                                    <Button Name="Specific_Mod_Settings" Click="Specific_Mod_Settings_Click" Margin="0,0,5,0" Height="30" Width="30" Grid.Column="2" Style="{DynamicResource MaterialDesignFloatingActionButton}">
+                                    <Button Name="Specific_Mod_Settings" Click="Specific_Mod_Settings_Click" Tag="{Binding UUID}" Margin="0,0,5,0" Height="30" Width="30" Grid.Column="2" Style="{DynamicResource MaterialDesignFloatingActionButton}">
                                         <materialDesign:PackIcon Kind="Cog" Foreground="White"/>
                                     </Button>
                                     <Button BorderBrush="#e7447a" Background="#e7447a" Margin="0,0,5,0" Height="30" Width="30" Grid.Column="3" Style="{DynamicResource MaterialDesignFloatingActionButton}">
