--- a/Shrek2ModdingSDK/Shrek2ModManager/MainWindow.xaml
+++ b/Shrek2ModdingSDK/Shrek2ModManager/MainWindow.xaml
@@ -20,61 +20,64 @@
         MinWidth="400"
         WindowStartupLocation="CenterScreen"
         Initialized="Window_Initialized"
+        Closed="Window_Closed"
         Icon="pack://siteoforigin:,,,/Resources/s2mmlogo.png">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
-            <RowDefinition />
-            <RowDefinition Height="75" />
-        </Grid.RowDefinitions>
-
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Button VerticalAlignment="Top" Style="{DynamicResource MaterialDesignRaisedButton}" Foreground="#fff" Margin="10,10,0,0">Add mod</Button>
-            <Button VerticalAlignment="Top" Style="{DynamicResource MaterialDesignRaisedButton}" Foreground="#fff" Margin="10,10,0,0">Settings</Button>
-        </StackPanel>
-
-        <Grid Grid.Row="1">
-
+    <materialDesign:DialogHost>
+        <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="40" />
+                <RowDefinition Height="50" />
                 <RowDefinition />
+                <RowDefinition Height="75" />
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Margin="10,0,0,0" FontWeight="Bold" Style="{DynamicResource MaterialDesignHeadline4TextBlock}">Installed mods</TextBlock>
+            <StackPanel Grid.Row="0" Orientation="Horizontal">
+                <Button VerticalAlignment="Top" Style="{DynamicResource MaterialDesignRaisedButton}" Foreground="#fff" Margin="10,10,0,0">Add mod</Button>
+                <Button VerticalAlignment="Top" Style="{DynamicResource MaterialDesignRaisedButton}" Foreground="#fff" Margin="10,10,0,0">Settings</Button>
+            </StackPanel>
 
-            <ScrollViewer Grid.Row="1">
-                <ItemsControl Name="ModItemsList">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate DataType="{x:Type local:Shrek2ModListItem}">
-                            <Border x:Name="Border" Padding="4">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto" />
-                                        <ColumnDefinition />
-                                        <ColumnDefinition Width="Auto" />
-                                        <ColumnDefinition Width="Auto" />
-                                    </Grid.ColumnDefinitions>
-                                    <CheckBox VerticalAlignment="Center" IsChecked="{Binding IsChecked}" materialDesign:CheckBoxAssist.CheckBoxSize="30" />
-                                    <StackPanel Margin="8,0,0,0" Grid.Column="1">
-                                        <TextBlock FontSize="20" FontWeight="Bold" Text="{Binding Title}" />
-                                        <TextBlock FontSize="15" Text="{Binding Description}" TextTrimming="WordEllipsis" />
-                                    </StackPanel>
-                                    <Button Name="Specific_Mod_Settings" Click="Specific_Mod_Settings_Click" Tag="{Binding UUID}" Margin="0,0,5,0" Height="30" Width="30" Grid.Column="2" Style="{DynamicResource MaterialDesignFloatingActionButton}">
-                                        <materialDesign:PackIcon Kind="Cog" Foreground="White"/>
-                                    </Button>
-                                    <Button BorderBrush="#e7447a" Background="#e7447a" Margin="0,0,5,0" Height="30" Width="30" Grid.Column="3" Style="{DynamicResource MaterialDesignFloatingActionButton}">
-                                        <materialDesign:PackIcon Kind="Close" Foreground="White"/>
-                                    </Button>
-                                </Grid>
-                            </Border>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </ScrollViewer>
+            <Grid Grid.Row="1">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="0" Margin="10,0,0,0" FontWeight="Bold" Style="{DynamicResource MaterialDesignHeadline4TextBlock}">Installed mods</TextBlock>
+
+                <ScrollViewer Grid.Row="1">
+                    <ItemsControl Name="ModItemsList">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate DataType="{x:Type local:Shrek2ModListItem}">
+                                <Border x:Name="Border" Padding="4">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition />
+                                            <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="Auto" />
+                                        </Grid.ColumnDefinitions>
+                                        <CheckBox VerticalAlignment="Center" IsChecked="{Binding IsChecked}" materialDesign:CheckBoxAssist.CheckBoxSize="30" />
+                                        <StackPanel Margin="8,0,0,0" Grid.Column="1">
+                                            <TextBlock FontSize="20" FontWeight="Bold" Text="{Binding Title}" />
+                                            <TextBlock FontSize="15" Text="{Binding Description}" TextTrimming="WordEllipsis" />
+                                        </StackPanel>
+                                        <Button Name="Specific_Mod_Settings" Click="Specific_Mod_Settings_Click" Tag="{Binding UUID}" Margin="0,0,5,0" Height="30" Width="30" Grid.Column="2" Style="{DynamicResource MaterialDesignFloatingActionButton}">
+                                            <materialDesign:PackIcon Kind="Cog" Foreground="White"/>
+                                        </Button>
+                                        <Button Name="Specific_Mod_Remove" Click="Specific_Mod_Remove_Click" Tag="{Binding UUID}" BorderBrush="#e7447a" Background="#e7447a" Margin="0,0,5,0" Height="30" Width="30" Grid.Column="3" Style="{DynamicResource MaterialDesignFloatingActionButton}">
+                                            <materialDesign:PackIcon Kind="Close" Foreground="White"/>
+                                        </Button>
+                                    </Grid>
+                                </Border>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
+            </Grid>
+
+            <StackPanel Grid.Row="2">
+                <Button Style="{DynamicResource MaterialDesignRaisedButton}" Height="55" FontSize="30" Foreground="#fff" Margin="10,10,10,0">Play</Button>
+            </StackPanel>
         </Grid>
-
-        <StackPanel Grid.Row="2">
-            <Button Style="{DynamicResource MaterialDesignRaisedButton}" Height="55" FontSize="30" Foreground="#fff" Margin="10,10,10,0">Play</Button>
-        </StackPanel>
-    </Grid>
+    </materialDesign:DialogHost>
 </Window>
